--- a/index.html
+++ b/index.html
@@ -11,7 +11,51 @@
 <link rel="stylesheet" href="./assets/css/style.css">
 <body>
 <div id="app">
+    <!-- background graduato in due colori -->
+    <div class="m-0 p-0" id="background">
+        <!-- finestra della webapp centreata -->
+        <main id="finestra-chat" class="bg-white d-flex">
+            <!-- divisione del main in due lati -->
+            <section id="aside-profilo" class="col-5">
+                <!-- divisione i due div -->
 
+            </section>
+            <section id="aside-chat" class="col-7">
+                <!-- divisione in tre div -->
+                <div id="reciever">
+                    <!-- profilo destinatario -->
+                    <div 
+                    
+                    class="d-flex align-items-center"
+                    >
+                        <div id="pp" class="col-1"><img class="rounded-circle" src="./assets/img/avatar_1.jpg" alt=""></div>
+                        <div class="d-flex flex-column justify-content-start col-8">
+                            <div>
+                                michele
+                            </div>
+                            <div id="last-login">
+                                ultimo accesso
+                            </div>
+                        </div>
+                        <div class="d-flex col-3">
+                            <i class="fa-solid fa-magnifying-glass" style="color: rgb(177 176 176);"></i>
+                            <i class="fa-solid fa-paperclip" style="color: rgb(177 176 176);"></i>
+                            <i class="fa-solid fa-ellipsis-vertical" style="color: rgb(177 176 176);"></i>
+                        </div>
+
+                    </div>
+                </div>
+                <div id="chat" class="overflow-y-scroll">
+
+                </div>
+                <div class="d-flex align-items-center" id="scrivi">
+                    <i class="fa-regular fa-face-smile"></i>
+                    <input type="text" class="form-control" placeholder="Scrivi un messaggio" aria-label="text" aria-describedby="addon-wrapping">
+                    <i class="fa-solid fa-microphone"></i>
+                </div>
+            </section>
+        </main>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
