--- a/index.html
+++ b/index.html
@@ -45,26 +45,36 @@
                     </div>
                 </div>
                 <!-- search -->
-                <div id="search-bar">
-                    <input type="search">
+                <div id="search-bar" class="d-flex">
+                    <!-- <form class="d-flex p-2" role="search"> -->
+                        <span class="bg-white btn-outline-secondary p-0 border border-secondary border-end-0 ms-1" type="submit">
+                            <i class="fa-solid fa-magnifying-glass px-2 " style="color: rgb(177 176 176);"></i>
+                        </span>
+                        <input class=" m-0 p-0" type="search" placeholder="Search">
+                      <!-- </form> -->
                 </div>
                 <!-- secondo div con i contatti -->
                 <div id="contatti" class="overflow-auto">
                     <div
-                    class=""
-                    v-for="(elem, index) in contacts" :key="index">
-                    <div id="" class="pp col-1"><img class="rounded-circle" :src="elem.avatar" alt=""></div>
-                    <div class="d-flex flex-column justify-content-start col-8">
-                        <div>
-                            {{elem.name}}
+                    id="contatto"
+                    class="d-flex justify-content-start"
+                    v-for="(elem, index) in contacts" :key="index"
+                    :class= "currentActive === index ? 'active' :''" @click="setCurrent(index)"
+                    >
+                        <div id="" class="pp col-1">
+                            <img class="rounded-circle" :src="elem.avatar" alt="">
                         </div>
-                        <div id="last-login">
-                            Ultimo messaggio inviato
+                        <div class="d-flex flex-column justify-content-start col-9">
+                            <div>
+                                {{elem.name}}
+                            </div>
+                            <div id="last-login">
+                                Ultimo messaggio inviato
+                            </div>
                         </div>
-                        </div>
-                        <div class="d-flex col-3">
+                        <!-- <div class="col-2">
                             <i style="color: rgb(177 176 176);">12:00</i>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
@@ -78,10 +88,12 @@
                     
                     class="d-flex align-items-center"
                     >
-                        <div id="" class="pp col-1"><img class="rounded-circle" src="./assets/img/avatar_1.jpg" alt=""></div>
+                        <div id="" class="pp col-1">
+                            <img class="rounded-circle" :src="contacts[currentActive].avatar" alt="">
+                        </div>
                         <div class="d-flex flex-column justify-content-start col-8">
                             <div>
-                                michele
+                                {{contacts[currentActive].name}}
                             </div>
                             <div id="last-login">
                                 ultimo accesso
@@ -100,8 +112,9 @@
                         <div class=" card inviato col-4 float-end p-2">
                             testo inviato
                         </div>
-                        <div class="card ricevuto col-4 float-start p-1">
-                            testo ricevuto
+                        <div
+                         class="card ricevuto col-4 float-start p-2">
+                            {{contacts[currentActive].message}}
                         </div>
                     </div>
                 </div>
