--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <span class="bg-white btn-outline-secondary p-0 border border-secondary border-end-0 ms-1" type="submit">
                             <i class="fa-solid fa-magnifying-glass px-2 " style="color: rgb(177 176 176);"></i>
                         </span>
-                        <input class=" m-0 p-0" type="search" placeholder="Search">
+                        <input id="searchbar" class=" m-0 p-0" type="search" placeholder="Search" onkeyup="searchContact()">
                       <!-- </form> -->
                 </div>
                 <!-- secondo div con i contatti -->
@@ -109,12 +109,11 @@
                 </div>
                 <div id="chat" class="">
                     <div class="container overflow-auto d-flex flex-column p-2">
-                        <div class=" card inviato col-4 float-end p-2">
-                            inviato
-                        </div>
                         <div
-                         class="card ricevuto col-4 float-start p-2">
-                            {{contacts[currentActive].message}}
+                        v-for="(elem, index) in contacts[currentActive].messages" :key="index"
+                        :class="elem.status == 'sent' ? 'inviato' : 'ricevuto'"
+                         class="card col-4 float-start p-2">
+                            {{elem.message}}
                         </div>
                         <div
                         v-for="(elem, index) in sent" :key="index"
@@ -130,7 +129,9 @@
                 </div>
                 <div class="d-flex align-items-center" id="scrivi">
                     <i class="fa-regular fa-face-smile"></i>
+
                     <input type="text" class="form-control" v-model="addText" @keyUp.enter="creaMsg" placeholder="Scrivi un messaggio" aria-label="text" aria-describedby="addon-wrapping">
+
                     <i class="fa-solid fa-microphone"></i>
                 </div>
             </section>
